# zentinel-agent-haskell-sdk

./: README.md  cabal.project
examples/echo-agent/: Main.hs  echo-agent.cabal
examples/waf-agent/: Main.hs  waf-agent.cabal
sentinel-agent-protocol/: CHANGELOG.md  sentinel-agent-protocol.cabal
sentinel-agent-protocol/src/Sentinel/Agent/: Handler.hs  Health.hs  Metrics.hs  Protocol.hs  Server.hs  Types.hs
sentinel-agent-protocol/src/Sentinel/Agent/Internal/: Framing.hs  Logging.hs
sentinel-agent-protocol/src/Sentinel/Agent/Transport/: GRPC.hs  UDS.hs
sentinel-agent-protocol/test/Test/Sentinel/Agent/: Framing.hs  Types.hs
zentinel-agent-protocol/: CHANGELOG.md  LICENSE  zentinel-agent-protocol.cabal
zentinel-agent-protocol/src/Zentinel/Agent/: Handler.hs  Health.hs  Metrics.hs  Protocol.hs  Server.hs  Types.hs
zentinel-agent-protocol/src/Zentinel/Agent/Internal/: Framing.hs  Logging.hs
zentinel-agent-protocol/src/Zentinel/Agent/Transport/: GRPC.hs  UDS.hs
zentinel-agent-protocol/test/Test/Zentinel/Agent/: Framing.hs  Types.hs
