cabal-version:   3.0
name:            sentinel-agent-protocol
version:         0.1.0.0
synopsis:        Haskell SDK for Sentinel Agent Protocol v2
description:
  A Haskell SDK for implementing Sentinel agents that communicate with
  the Sentinel reverse proxy using protocol v2. Supports both Unix Domain
  Socket (UDS) and gRPC transports.
  .
  See the README for usage examples and the full protocol specification.

license:         Apache-2.0
license-file:    LICENSE
author:          Raskell
maintainer:      agents@raskell.io
copyright:       2026 Raskell
category:        Network, Security
build-type:      Simple
tested-with:     GHC == 9.8.2, GHC == 9.10.1
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/raskell-io/sentinel-agent-haskell

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wmissing-export-lists
               -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   src

  exposed-modules:
    Sentinel.Agent.Protocol
    Sentinel.Agent.Types
    Sentinel.Agent.Handler
    Sentinel.Agent.Server
    Sentinel.Agent.Health
    Sentinel.Agent.Metrics
    Sentinel.Agent.Transport.UDS
    Sentinel.Agent.Transport.GRPC

  other-modules:
    Sentinel.Agent.Internal.Framing
    Sentinel.Agent.Internal.Logging

  build-depends:
    , base                  >= 4.19 && < 5
    , aeson                 >= 2.2  && < 2.3
    , text                  >= 2.1  && < 2.2
    , bytestring            >= 0.12 && < 0.13
    , containers            >= 0.7  && < 0.8
    , unordered-containers  >= 0.2.20 && < 0.3
    , vector                >= 0.13 && < 0.14
    , async                 >= 2.2  && < 2.3
    , stm                   >= 2.5  && < 2.6
    , network               >= 3.2  && < 3.3
    , unliftio              >= 0.2.25 && < 0.3
    , time                  >= 1.14 && < 1.15
    , uuid                  >= 1.3  && < 1.4
    , base64                >= 1.0  && < 1.1
    , hashable              >= 1.4  && < 1.5
    , mtl                   >= 2.3  && < 2.4
    , transformers          >= 0.6  && < 0.7
    , http2                 >= 5.0  && < 5.4
    , proto3-suite          >= 0.7  && < 0.9
    , proto3-wire           >= 1.4  && < 1.5
    , grpc-haskell          >= 0.3  && < 0.4
    , co-log-core           >= 0.3  && < 0.4
    , scientific            >= 0.3  && < 0.4
    , deepseq               >= 1.5  && < 1.6

  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    StrictData
    TypeFamilies

test-suite sentinel-agent-protocol-test
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs

  other-modules:
    Test.Sentinel.Agent.Types
    Test.Sentinel.Agent.Framing

  build-depends:
    , base
    , sentinel-agent-protocol
    , aeson
    , bytestring
    , text
    , hspec                 >= 2.11 && < 2.12
    , hspec-discover        >= 2.11 && < 2.12
    , QuickCheck            >= 2.14 && < 2.15
