cabal-version:   3.0
name:            echo-agent
version:         0.1.0.0
synopsis:        Simple echo agent example for Sentinel
description:     A minimal Sentinel agent that allows all requests.
license:         Apache-2.0
license-file:    ../../LICENSE
author:          Raskell
maintainer:      agents@raskell.io
copyright:       2026 Raskell
category:        Network
build-type:      Simple

executable echo-agent
  main-is:          Main.hs
  default-language: GHC2021
  hs-source-dirs:   .

  build-depends:
    , base                     >= 4.19 && < 5
    , sentinel-agent-protocol
    , text                     >= 2.1

  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

  default-extensions:
    OverloadedRecordDot
    OverloadedStrings
